--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formbuilder-trial",
+  "name": "ngModel-data-transfer",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:server": "json-server --watch data.json"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "json-server": "^0.14.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
